--- a/config.toml
+++ b/config.toml
@@ -31,8 +31,8 @@ googleAnalytics = ""
 	highlight_css  = ""
 
 	[params.palette]
-    	primary = "red"
-    	accent  = "light green"
+    	primary = "cyan"
+    	accent  = "deep orange"
 
     [params.font]
     	text = "Ubuntu"
@@ -246,7 +246,7 @@ googleAnalytics = ""
 
 [[menu.main]]
 	name   = "Examples"
-	url    = "examples/"
+	url    = "https://github.com/iris-contrib/examples"
 	weight = 400
 
 [blackfriday]
